fix desktop overflow

--- a/global.css
+++ b/global.css
@@ -9,6 +9,11 @@
     --fonte-corpo: 'Source Serif 4', sans-serif;
 }
 
+html {
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 body {
     width: 100%;
     max-width: 1024px;
